Working on web pages

--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -15,6 +15,7 @@
         baseUrl: '../static/js/lib',
         paths: {
             jquery: 'jquery-2.1.4',
+            bootstrap: 'boostrap.min',
             ace: 'ace'
         }
     });
