--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -4,7 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="description" content="Team 3637 Robot Manager"/>
 <meta name="author" content="Team 3637"/>
+<link href="../static/assets/icon.png" rel="shortcut icon"/>
 <link href="../static/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="../static/css/dashboard.css" rel="stylesheet"/>
 <link href="../static/css/main.css" rel="stylesheet"/>
 {{end}}
 
