Added auto generating directories and manifest

--- a/web/dynamic/index.html
+++ b/web/dynamic/index.html
@@ -14,7 +14,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/">Team 3637 Robot Manager</a>
+            <p class="navbar-brand">Team 3637 Robot Manager</p>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <form id="navbar-buttons" class="navbar-form navbar-right">
