Added dynamic editor

--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -4,17 +4,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="description" content="Team 3637 Robot Manager"/>
 <meta name="author" content="Team 3637"/>
-<link href="../static/assets/icon.png" rel="shortcut icon"/>
-<link href="../static/css/bootstrap.min.css" rel="stylesheet"/>
-<link href="../static/css/dashboard.css" rel="stylesheet"/>
-<link href="../static/css/main.css" rel="stylesheet"/>
+<link href="/static/assets/icon.png" rel="shortcut icon"/>
+<link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="/static/css/dashboard.css" rel="stylesheet"/>
+<link href="/static/css/main.css" rel="stylesheet"/>
 {{end}}
 
 {{define "jsIncludes"}}
-<script src="../static/js/lib/require.js"></script>
+<script src="/static/js/lib/require.js"></script>
 <script>
     requirejs.config({
-        baseUrl: '../static/js/lib',
+        baseUrl: '/static/js/lib',
         paths: {
             jquery: 'jquery-2.1.4',
             bootstrap: 'boostrap.min',
