--- a/web/dynamic/index.html
+++ b/web/dynamic/index.html
@@ -19,8 +19,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <form id="navbar-buttons" class="navbar-form navbar-right">
                 <button id="reset" type="button" class="btn nav-box">Reset Robot</button>
-                <p class="btn nav-box">Robot <span id="robot-status" class="status stopped">Stopped</span></p>
-                <p class="btn nav-box">MQTT <span id="mqtt-status" class="status stopped">Stopped</span></p>
+                <p class="btn nav-box">Robot <span id="robot-status" class="status no-status">No Status</span></p>
+                <p class="btn nav-box">MQTT <span id="mqtt-status" class="status no-status">No Status</span></p>
             </form>
         </div>
 </nav>
