Added more pages

--- a/web/dynamic/controls.html
+++ b/web/dynamic/controls.html
@@ -30,7 +30,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="autonomous">Autonomous</a></li>
                 <li><a href="ports">Port</a></li>
-                <li><a href="controls">Controls</a></li>
+                <li class="active"><a href="controls">Controls</a></li>
                 <li><a href="settings">Settings</a></li>
                 <li><a href="logs">Logs</a></li>
                 <li><a href="binaries">Binaries</a></li>
