--- a/web/dynamic/settings.html
+++ b/web/dynamic/settings.html
@@ -31,7 +31,7 @@
                 <li><a href="autonomous">Autonomous</a></li>
                 <li><a href="ports">Port</a></li>
                 <li><a href="controls">Controls</a></li>
-                <li><a href="settings">Settings</a></li>
+                <li class="active"><a href="settings">Settings</a></li>
                 <li><a href="logs">Logs</a></li>
                 <li><a href="binaries">Binaries</a></li>
             </ul>
