--- a/web/dynamic/autonomous.html
+++ b/web/dynamic/autonomous.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li><a href="autonomous">Autonomous</a></li>
+                <li class="active"><a href="autonomous">Autonomous</a></li>
                 <li><a href="ports">Port</a></li>
                 <li><a href="controls">Controls</a></li>
                 <li><a href="settings">Settings</a></li>
