--- a/web/dynamic/binaries.html
+++ b/web/dynamic/binaries.html
@@ -33,7 +33,7 @@
                 <li><a href="controls">Controls</a></li>
                 <li><a href="settings">Settings</a></li>
                 <li><a href="logs">Logs</a></li>
-                <li><a href="binaries">Binaries</a></li>
+                <li class="active"><a href="binaries">Binaries</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
