--- a/web/dynamic/logs.html
+++ b/web/dynamic/logs.html
@@ -32,7 +32,7 @@
                 <li><a href="ports">Port</a></li>
                 <li><a href="controls">Controls</a></li>
                 <li><a href="settings">Settings</a></li>
-                <li><a href="logs">Logs</a></li>
+                <li class="active"><a href="logs">Logs</a></li>
                 <li><a href="binaries">Binaries</a></li>
             </ul>
         </div>
