Added save function to editor

--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -35,10 +35,10 @@
         }
     });
 
-    require(['ace/ace'], function (ace) {
+/*    require(['ace/ace'], function (ace) {
         var editor = ace.edit('editor');
         editor.setTheme('ace/theme/monokai');
         editor.getSession().setMode('ace/mode/lua');
-    });
+    });*/
 </script>
 {{end}}
