--- a/web/dynamic/autonomous.html
+++ b/web/dynamic/autonomous.html
@@ -18,7 +18,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <form id="navbar-buttons" class="navbar-form navbar-right">
-                <button id="reset" type="button" class="btn nav-box">Reset Robot</button>
+                <button id="reset" type="button" class="btn nav-box nav-btn">Reset Robot</button>
                 <p class="btn nav-box">Robot <span id="robot-status" class="status no-status">No Status</span></p>
                 <p class="btn nav-box">MQTT <span id="mqtt-status" class="status no-status">No Status</span></p>
             </form>
