--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -4,6 +4,7 @@
 <head>
     <title>Team 3637 Robot Manager</title>
     {{template "cssIncludes"}}
+    <link href="/static/css/editor.css" rel="stylesheet" media="screen">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -18,7 +19,7 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
         <form id="navbar-buttons" class="navbar-form navbar-right">
-            <button id="reset" type="button" class="btn nav-box">Reset Robot</button>
+            <button id="reset" type="button" class="btn nav-box nav-btn">Reset Robot</button>
             <p class="btn nav-box">Robot <span id="robot-status" class="status no-status">No Status</span></p>
 
             <p class="btn nav-box">MQTT <span id="mqtt-status" class="status no-status">No Status</span></p>
@@ -37,8 +38,13 @@
                 <li><a href="binaries">Binaries</a></li>
             </ul>
         </div>
-        <div class="col-md-10 col-md-offset-2" style="padding: 0">
+        <div class="col-md-10 col-md-offset-2" style="padding: 0; background-color: #272822;">
             <div id="editor" style="background-color: #272822">{{.FileContent}}</div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-10 col-md-offset-2 nav-bottom">
+            <button id="save" class="btn nav-box nav-btn">Save</button>
         </div>
     </div>
 </div>
