Added save to ui

--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -44,7 +44,7 @@
     </div>
     <div class="row">
         <div class="col-md-10 col-md-offset-2 nav-bottom">
-            <button id="save" class="btn nav-box nav-btn disabled">Save</button>
+            <button id="save" class="btn nav-box nav-btn" disabled>Save</button>
         </div>
     </div>
 </div>
