Fixed lang selection bug

--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 </div>
-
+<script>var lang = '{{.Lang}}';</script>
 {{template "editorJsIncludes"}}
 <script src="/static/js/editor.js"></script>
 </body>
