--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -31,14 +31,9 @@
         paths: {
             jquery: 'jquery-2.1.4.min',
             bootstrap: 'boostrap.min',
+            mousetrap: 'mousetrap.min',
             ace: 'ace'
         }
     });
-
-/*    require(['ace/ace'], function (ace) {
-        var editor = ace.edit('editor');
-        editor.setTheme('ace/theme/monokai');
-        editor.getSession().setMode('ace/mode/lua');
-    });*/
 </script>
 {{end}}
