Made side bar collapsible

--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -29,7 +29,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-2 sidebar">
+            <p id="folderViewExpand" class="glyphicon glyphicon-chevron-right hidden"></p>
             <ul class="nav nav-sidebar">
+                <li><p id="folderViewShrink">Folder View<span class="glyphicon glyphicon-chevron-left"></span></p></li>
                 <li><a id="autonomous" href="../../autonomous">Autonomous</a></li>
                 <li><a id="ports" href="../../ports">Port</a></li>
                 <li><a id="controls" href="../../controls">Controls</a></li>
