--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -29,9 +29,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-2 sidebar">
-            <p id="folderViewExpand" class="glyphicon glyphicon-chevron-right hidden"></p>
+            <p id="folderViewExpand" class="glyphicon glyphicon-chevron-right hidden viewExpand"></p>
             <ul class="nav nav-sidebar">
-                <li><p id="folderViewShrink">Folder View<span class="glyphicon glyphicon-chevron-left"></span></p></li>
+                <li><p id="folderViewShrink" class="viewShrink">Folder View<span class="glyphicon glyphicon-chevron-left"></span></p></li>
                 <li><a id="autonomous" href="../../autonomous">Autonomous</a></li>
                 <li><a id="ports" href="../../ports">Port</a></li>
                 <li><a id="controls" href="../../controls">Controls</a></li>
@@ -40,8 +40,14 @@
                 <li><a id="binaries" href="../../binaries">Binaries</a></li>
             </ul>
         </div>
-        <div class="col-md-10 col-md-offset-2" style="padding: 0; background-color: #272822;">
+        <div class="col-md-8 col-md-offset-2" style="padding: 0; background-color: #272822;">
             <div id="editor" style="background-color: #272822">{{.FileContent}}</div>
+        </div>
+        <div class="col-md-2 col-md-offset-10 rightbar">
+            <p id="fileViewExpand" class="glyphicon glyphicon-chevron-left hidden viewExpand"></p>
+            <ul class="nav nav-rightbar">
+                <li><p id="fileViewShrink" class="viewShrink"><span class="glyphicon glyphicon-chevron-right"></span>File View</p></li>
+            </ul>
         </div>
     </div>
     <div class="row">
