--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -45,23 +45,58 @@
         </div>
         <div class="col-md-2 col-md-offset-10 rightbar">
             <p id="fileViewExpand" class="glyphicon glyphicon-chevron-left hidden viewExpand"></p>
-            <ul class="nav nav-rightbar">
-                <li><p id="fileViewShrink" class="viewShrink"><span class="glyphicon glyphicon-chevron-right"></span>File View</p></li>
-            </ul>
+            <div class="nav nav-rightbar">
+                <p id="fileViewShrink" class="viewShrink"><span class="glyphicon glyphicon-chevron-right"></span>File View</p>
+                <form>
+                    <div id="files" class="accordion" data-bind="foreach: files">
+                       <div class="accordion">
+                           <div class="accordion-section-title">
+                               <a class="accordion-section-title-text"
+                                  data-bind="attr: {href: '#accordion-'+$index()}, text: $data"></a>
+                               <span class="selected"></span>
+                           </div>
+                           <div class="accordion-section-content"
+                                data-bind="attr: {id:'accordion-'+$index()}">
+                               <a name="edit" class="fileButton"
+                                  data-bind="attr: {href: '/editor/autonomous/' + $data}">Edit</a>
+                               <a name="delete" class="fileButton"
+                                  data-bind="attr: {href: 'javascript:deleteFile(\'' + $data + '\');'}">Delete</a>
+                               <a name="download" class="fileButton"
+                                  data-bind="attr: {href: '/file/autonomous/' + $data}" download>Download</a>
+                               <a name="select" class="fileButton"
+                                  data-bind="attr: {href: 'javascript:selectFile(\'' + $data + '\');'}">Select</a>
+                           </div>
+                       </div>
+                    </div>
+                </form>
+            </div>
+            <div id="fileButtons">
+                <button id="newFile" class="btn nav-box nav-btn"><span class="glyphicon glyphicon-plus"></span></button>
+                <button id="uploadFile" class="btn nav-box nav-btn">
+                    <span class="glyphicon glyphicon-upload"></span></button>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-10 col-md-offset-2 nav-bottom">
-            <button id="save" class="btn nav-box nav-btn" disabled>Save</button>
+            <div id="fileNameContainer" class="btn nav-box nav-btn form-inline">
+                <button id="save" class="btn nav-box nav-btn" disabled>Save</button>
+                <label for="fileName"></label>
+                <input id="fileName" class="form-control"/>
+            </div>
         </div>
     </div>
 </div>
 <script>
     var lang = '{{.Lang}}';
     var fileType = '{{.FileType}}';
+    var fileName = '{{.FileName}}';
+    var files= eval('{{.Files}}');
 </script>
 {{template "editorJsIncludes"}}
+<script src="/static/js/main.js"></script>
 <script src="/static/js/editor.js"></script>
+<script src="/static/js/files.js"></script>
 </body>
 </html>
 {{end}}
