--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -5,9 +5,10 @@
 <meta name="description" content="Team 3637 Robot Manager"/>
 <meta name="author" content="Team 3637"/>
 <link href="/static/assets/icon.png" rel="shortcut icon"/>
+<link href="/static/css/main.css" rel="stylesheet"/>
+<link href="/static/css/accordion.css" rel="stylesheet"/>
 <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="/static/css/dashboard.css" rel="stylesheet"/>
-<link href="/static/css/main.css" rel="stylesheet"/>
 {{end}}
 
 {{define "jsIncludes"}}
@@ -32,6 +33,7 @@
             jquery: 'jquery-2.1.4.min',
             bootstrap: 'boostrap.min',
             mousetrap: 'mousetrap.min',
+            ko: 'knockout-3.4.0',
             ace: 'ace'
         }
     });
