Fixed bug with accordions and delete

--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -91,6 +91,7 @@
     var lang = '{{.Lang}}';
     var fileType = '{{.FileType}}';
     var fileName = '{{.FileName}}';
+    var files = ["cake.lua", "f.lua", "test.lua"];
 </script>
 {{template "editorJsIncludes"}}
 <script src="/static/js/main.js"></script>
