--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -70,16 +70,19 @@
                 </form>
             </div>
             <div id="fileButtons">
-                <button id="newFile" class="btn nav-box nav-btn"><span class="glyphicon glyphicon-plus"></span></button>
+                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile()">
+                    <span class="glyphicon glyphicon-plus"></span>
+                </button>
                 <button id="uploadFile" class="btn nav-box nav-btn">
-                    <span class="glyphicon glyphicon-upload"></span></button>
+                    <span class="glyphicon glyphicon-upload"></span>
+                </button>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-10 col-md-offset-2 nav-bottom">
             <div id="fileNameContainer" class="btn nav-box nav-btn form-inline">
-                <button id="save" class="btn nav-box nav-btn" disabled>Save</button>
+                <button id="save" class="btn nav-box nav-btn">Save</button>
                 <label for="fileName"></label>
                 <input id="fileName" class="form-control"/>
             </div>
