--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -73,9 +73,12 @@
                 <button id="newFile" class="btn nav-box nav-btn" onclick="newFile()">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
-                <button id="uploadFile" class="btn nav-box nav-btn">
+                <button id="uploadFile" class="btn nav-box nav-btn" onclick="$('#file').click()">
                     <span class="glyphicon glyphicon-upload"></span>
                 </button>
+                <form method="post" enctype="multipart/form-data">
+                    <input id="file" type="file" name="file" class="hidden"/>
+                </form>
             </div>
         </div>
     </div>
