--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -52,7 +52,7 @@
                            <div class="accordion-section-title">
                                <a class="accordion-section-title-text"
                                   data-bind="attr: {href: '#accordion-'+$index()}, text: $data"></a>
-                               <span class="selected"></span>
+                               <span class="selected-file glyphicon glyphicon-ok hidden"></span>
                            </div>
                            <div class="accordion-section-content"
                                 data-bind="attr: {id:'accordion-'+$index()}">
