--- a/web/dynamic/binaries.html
+++ b/web/dynamic/binaries.html
@@ -57,8 +57,6 @@
                             </div>
                             <div class="accordion-section-content"
                                  data-bind="attr: {id:'accordion-'+$index()}">
-                                <a name="edit" class="fileButton"
-                                   data-bind="attr: {href: '/editor/' + files.fileType + '/' + $data}">Edit</a>
                                 <a name="delete" class="fileButton"
                                    data-bind="attr: {href: 'javascript:deleteFile(\'' + $data + '\');'}">Delete</a>
                                 <a name="download" class="fileButton"
@@ -85,13 +83,18 @@
     </div>
     <div class="row">
         <div class="col-md-10 col-md-offset-2 nav-bottom">
-
+            <div id="fileNameContainer" class="btn nav-box nav-btn form-inline">
+                <label for="fileName"></label>
+                <input id="fileName" class="form-control"/>
+                <button id="pull-bin" class="btn nav-box nav-btn" onclick="pullBin();">Pull Binary</button>
+            </div>
         </div>
     </div>
 </div>
 {{template "editorJsIncludes"}}
 <script src="/static/js/main.js"></script>
 <script src="/static/js/files.js"></script>
+<script src="/static/js/binaries.js"></script>
 </body>
 </html>
 {{end}}
