Settings UI builds from template

--- a/web/dynamic/binaries.html
+++ b/web/dynamic/binaries.html
@@ -86,12 +86,12 @@
             <div id="fileNameContainer" class="btn nav-box nav-btn form-inline">
                 <label for="fileName"></label>
                 <input id="fileName" class="form-control"/>
-                <button id="pull-bin" class="btn nav-box nav-btn" onclick="pullBin();">Pull Binary</button>
+                <button id="save" class="btn nav-box nav-btn" onclick="pullBin();">Pull Binary</button>
             </div>
         </div>
     </div>
 </div>
-{{template "editorJsIncludes"}}
+{{template "jsIncludes"}}
 <script src="/static/js/main.js"></script>
 <script src="/static/js/files.js"></script>
 <script src="/static/js/binaries.js"></script>
