--- a/web/dynamic/controls.html
+++ b/web/dynamic/controls.html
@@ -89,7 +89,7 @@
         </div>
     </div>
 </div>
-{{template "editorJsIncludes"}}
+{{template "jsIncludes"}}
 <script src="/static/js/main.js"></script>
 <script src="/static/js/files.js"></script>
 </body>
