--- a/web/dynamic/settings.html
+++ b/web/dynamic/settings.html
@@ -40,7 +40,7 @@
                 <li><a id="binaries" href="../../binaries">Binaries</a></li>
             </ul>
         </div>
-        <div class="col-md-8 col-md-offset-2" style="padding: 0; background-color: #272822;">
+        <div id="content" class="content col-md-8 col-md-offset-2">
 
         </div>
         <div class="col-md-2 col-md-offset-10 rightbar">
@@ -57,6 +57,8 @@
                             </div>
                             <div class="accordion-section-content"
                                  data-bind="attr: {id:'accordion-'+$index()}">
+                                <a name="edit" class="fileButton"
+                                   data-bind="attr: {href: '/editor-gui/' + files.fileType + '/' + $data}">Edit - GUI</a>
                                 <a name="edit" class="fileButton"
                                    data-bind="attr: {href: '/editor/' + files.fileType + '/' + $data}">Edit</a>
                                 <a name="delete" class="fileButton"
@@ -84,14 +86,13 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-10 col-md-offset-2 nav-bottom">
 
-        </div>
     </div>
 </div>
-{{template "editorJsIncludes"}}
+{{template "jsIncludes"}}
 <script src="/static/js/main.js"></script>
 <script src="/static/js/files.js"></script>
+<script src="/static/js/settings.js"></script>
 </body>
 </html>
 {{end}}
