--- a/web/dynamic/ports.html
+++ b/web/dynamic/ports.html
@@ -57,6 +57,8 @@
                             </div>
                             <div class="accordion-section-content"
                                  data-bind="attr: {id:'accordion-'+$index()}">
+                                <a name="gui-edit" class="fileButton"
+                                   data-bind="attr: {href: '/editor-gui/' + files.fileType + '/' + $data}">Edit - GUI</a>
                                 <a name="edit" class="fileButton"
                                    data-bind="attr: {href: '/editor/' + files.fileType + '/' + $data}">Edit</a>
                                 <a name="delete" class="fileButton"
