made gui editor pages new file buttons open new file in gui editor

--- a/web/dynamic/binaries.html
+++ b/web/dynamic/binaries.html
@@ -69,9 +69,9 @@
                 </form>
             </div>
             <div id="fileButtons">
-                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile()">
+                <!--<button id="newFile" class="btn nav-box nav-btn" onclick="newFile('editor')">
                     <span class="glyphicon glyphicon-plus"></span>
-                </button>
+                </button>-->
                 <button id="uploadFile" class="btn nav-box nav-btn" onclick="$('#file').click()">
                     <span class="glyphicon glyphicon-upload"></span>
                 </button>
