--- a/web/dynamic/logs.html
+++ b/web/dynamic/logs.html
@@ -70,8 +70,8 @@
                     </div>
                 </form>
             </div>
-            <div id="fileButtons">
-                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile()">
+            <!--<div id="fileButtons">
+                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile('editor')">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
                 <button id="uploadFile" class="btn nav-box nav-btn" onclick="$('#file').click()">
@@ -80,7 +80,7 @@
                 <form method="post" enctype="multipart/form-data">
                     <input id="file" type="file" name="file" class="hidden"/>
                 </form>
-            </div>
+            </div>-->
         </div>
     </div>
     <div class="row">
