--- a/web/dynamic/settings-config.html
+++ b/web/dynamic/settings-config.html
@@ -85,7 +85,7 @@
                 </form>
             </div>
             <div id="fileButtons">
-                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile()">
+                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile('editor-gui')">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
                 <button id="uploadFile" class="btn nav-box nav-btn" onclick="$('#file').click()">
