Added separate new file in gui editor button in appropriate places

--- a/web/dynamic/ports-config.html
+++ b/web/dynamic/ports-config.html
@@ -79,7 +79,10 @@
                 </form>
             </div>
             <div id="fileButtons">
-                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile('editor-gui')">
+                <button id="newGUIFile" class="btn nav-box nav-btn" onclick="newFile('editor-gui')">
+                    <span class="glyphicon glyphicon-th-list"></span>
+                </button>
+                <button id="newFile" class="btn nav-box nav-btn" onclick="newFile('editor')">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
                 <button id="uploadFile" class="btn nav-box nav-btn" onclick="$('#file').click()">
