--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -72,6 +72,9 @@
                 </form>
             </div>
             <div id="fileButtons">
+                <button id="newGUIFile" class="btn nav-box nav-btn hidden" onclick="newFile('editor-gui')">
+                    <span class="glyphicon glyphicon-th-list"></span>
+                </button>
                 <button id="newFile" class="btn nav-box nav-btn" onclick="newFile('editor')">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
