--- a/web/dynamic/ports-config.html
+++ b/web/dynamic/ports-config.html
@@ -43,6 +43,7 @@
             </ul>
         </div>
         <div id="content" class="content col-md-8 col-md-offset-2">
+            <p id="error" class="h1 hidden" style="color: #9d9d9d"></p>
             <form id="config" class="top-object" data-bind="template: { name: 'template', foreach: $data }">
 
             </form>
