Implemented settings json editor (still need to fix css but functionally works)

--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -35,6 +35,7 @@
             bootstrap: 'boostrap.min',
             mousetrap: 'mousetrap.min',
             ko: 'knockout-3.4.0',
+            jsoneditor: 'jsoneditor.min',
             ace: 'ace'
         }
     });
