--- a/web/dynamic/settings-config.html
+++ b/web/dynamic/settings-config.html
@@ -42,7 +42,8 @@
             </ul>
         </div>
         <div id="content" class="content col-md-8 col-md-offset-2">
-            <form id="config" data-bind="foreach: subsystems">
+            <div id="config"></div>
+            <!--<form id="config" data-bind="foreach: subsystems">
                 <div class="object">
                     <p data-bind="text: name"></p>
                     <ul data-bind="foreach: values">
@@ -53,7 +54,7 @@
                         </li>
                     </ul>
                 </div>
-            </form>
+            </form>-->
         </div>
         <div class="col-md-2 col-md-offset-10 rightbar">
             <p id="fileViewExpand" class="glyphicon glyphicon-chevron-left hidden viewExpand"></p>
