--- a/web/dynamic/controls.html
+++ b/web/dynamic/controls.html
@@ -57,6 +57,8 @@
                             </div>
                             <div class="accordion-section-content"
                                  data-bind="attr: {id:'accordion-'+$index()}">
+                                <a name="gui-edit" class="fileButton"
+                                   data-bind="attr: {href: '/editor-gui/' + files.fileType + '/' + $data}">Edit - GUI</a>
                                 <a name="edit" class="fileButton"
                                    data-bind="attr: {href: '/editor/' + files.fileType + '/' + $data}">Edit</a>
                                 <a name="delete" class="fileButton"
@@ -71,6 +73,9 @@
                 </form>
             </div>
             <div id="fileButtons">
+                <button id="newGUIFile" class="btn nav-box nav-btn" onclick="newFile('editor-gui')">
+                    <span class="glyphicon glyphicon-th-list"></span>
+                </button>
                 <button id="newFile" class="btn nav-box nav-btn" onclick="newFile('editor')">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
