--- a/web/dynamic/config.html
+++ b/web/dynamic/config.html
@@ -92,7 +92,7 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-2 nav-bottom">
             <div id="fileNameContainer" class="btn nav-box nav-btn form-inline">
-                <button id="save" class="btn nav-box nav-btn">Save</button>
+                <button id="save" class="btn nav-box nav-btn" onclick="save()">Save</button>
                 <label for="fileName"></label>
                 <input id="fileName" class="form-control"/>
             </div>
