--- a/web/dynamic/config.html
+++ b/web/dynamic/config.html
@@ -5,7 +5,7 @@
     <title>Settings</title>
     {{template "cssIncludes"}}
     <link href="/static/css/editor.css" rel="stylesheet" media="screen">
-    <link href="/static/css/settings-config.css" rel="stylesheet"/>
+    <link href="/static/css/config.css" rel="stylesheet"/>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <nav class="navbar navbar-inverse navbar-fixed-top">
