--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -19,23 +19,9 @@
         paths: {
             jquery: 'jquery-2.1.4.min',
             bootstrap: 'boostrap.min',
-            ko: 'knockout-3.4.0'
-        }
-    });
-</script>
-{{end}}
-
-{{define "editorJsIncludes"}}
-<script src="/static/js/lib/require.js"></script>
-<script>
-    requirejs.config({
-        baseUrl: '/static/js/lib',
-        paths: {
-            jquery: 'jquery-2.1.4.min',
-            bootstrap: 'boostrap.min',
-            mousetrap: 'mousetrap.min',
+            json: 'jsoneditor.min',
             ko: 'knockout-3.4.0',
-            jsoneditor: 'jsoneditor.min',
+            mousetrap: 'mousetrap.min',
             ace: 'ace'
         }
     });
