--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 </div>
-{{template "editorJsIncludes"}}
+{{template "jsIncludes"}}
 <script src="/static/js/main.js"></script>
 <script src="/static/js/files.js"></script>
 <script src="/static/js/editor.js"></script>
