Switch to purge javascript mqtt checker

--- a/web/dynamic/includes.html
+++ b/web/dynamic/includes.html
@@ -22,6 +22,7 @@
             json: 'jsoneditor.min',
             ko: 'knockout-3.4.0',
             mousetrap: 'mousetrap.min',
+            mqtt: 'mqttws31',
             ace: 'ace'
         }
     });
