Made mqtt most and port configurable in the manifest

--- a/web/dynamic/config.html
+++ b/web/dynamic/config.html
@@ -6,6 +6,7 @@
     {{template "cssIncludes"}}
     <link href="/static/css/editor.css" rel="stylesheet" media="screen">
     <link href="/static/css/config.css" rel="stylesheet"/>
+    {{template "vars" .}}
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <nav class="navbar navbar-inverse navbar-fixed-top">
