--- a/web/dynamic/editor.html
+++ b/web/dynamic/editor.html
@@ -98,6 +98,9 @@
     </div>
 </div>
 {{template "jsIncludes"}}
+<script>
+    var readonly = '{{.ReadOnly}}'
+</script>
 <script src="/static/js/main.js"></script>
 <script src="/static/js/files.js"></script>
 <script src="/static/js/editor.js"></script>
