--- a/web/dynamic/autonomous.html
+++ b/web/dynamic/autonomous.html
@@ -5,6 +5,7 @@
     <title>Autonomous</title>
     {{template "cssIncludes"}}
     <link href="/static/css/editor.css" rel="stylesheet" media="screen">
+    {{template "vars" .}}
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <nav class="navbar navbar-inverse navbar-fixed-top">
